# VideoPlayer

./: .gitignore  CMakeLists.txt
3rdpard/ffmpeg/lib/: libavcodec.61.dylib  libavdevice.60.3.100.dylib  libavdevice.61.3.100.dylib  libavfilter.10.4.100.dylib  libavfilter.9.12.100.dylib  libavformat.60.16.100.dylib  libavformat.61.7.100.dylib  libavutil.58.29.100.dylib  libavutil.59.39.100.dylib  libpostproc.57.3.100.dylib  libpostproc.58.3.100.dylib  libpostproc.dylib  libswresample.4.12.100.dylib  libswresample.5.3.100.dylib  libswscale.7.5.100.dylib  libswscale.8.3.100.dylib
3rdpard/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
AVPlayer/: AVDecoderThread.cpp  AVPlayer.cpp  AVPlayer.h  AVReaderThread.cpp  AVSyncThread.cpp  CMakeLists.txt
AVQueue/: AVQueue.h
AVReader/: AVDecoder.cpp  AVHeader.h  AVManager.h  AVReader.cpp  AVReader.h  AVReaderFrame.cpp  AVReaderPacket.cpp  AVReaderStream.cpp  CMakeLists.txt
AVUtils/: AVTime.h
Render/: CMakeLists.txt  Render.h  RenderProgram.cpp  RenderShader.cpp  RenderThread.cpp  RenderVAO.cpp  test.cpp  test.h
VideoPlayer/: CMakeLists.txt  main.cpp  videoPlayer.cpp  videoPlayer.h
VideoThread/: CMakeLists.txt  videoThread.cpp  videoThread.h
